Update formatting
