# KaggleSwagger.yaml
@@ -34,170 +34,6 @@ externalDocs:
   url: https://www.kaggle.com
 tags:
   - name: kaggle
-definitions:
-  Result:
-    type: object
-  Error:
-    type: object
-    properties:
-      code:
-        type: integer
-        example: 404
-      message:
-        type: string
-        example: NotFound
-  DatasetColumn:
-    type: object
-    properties:
-      order:
-        type: number
-      name:
-        type: string
-      type:
-        type: string
-        default: unknown
-        enum:
-        - string
-        - boolean
-        - numeric
-        - datetime
-        - unknown
-      originalType:
-        type: string
-      description:
-        type: string
-  DatasetUploadFile:
-    type: object
-    properties:
-      token:
-        type: string
-      description:
-        type: string
-      columns:
-        type: array
-        items:
-          $ref: '#/definitions/DatasetColumn'
-  DatasetNewVersionRequest:
-    type: object
-    required:
-    - versionNotes
-    - files
-    properties:
-      versionNotes:
-        type: string
-      subtitle:
-        type: string
-      description:
-        type: string
-      files:
-        type: array
-        items:
-          $ref: '#/definitions/DatasetUploadFile'
-      convertToCsv:
-        type: boolean
-        default: true
-      categoryIds:
-        type: array
-        items:
-          type: string
-      deleteOldVersions:
-        type: boolean
-        default: false
-  DatasetNewRequest:
-    type: object
-    required:
-    - title
-    - licenseShortName
-    - files
-    properties:
-      title:
-        type: string
-      slug:
-        type: string
-      ownerSlug:
-        type: string
-      licenseName:
-        type: string
-        default: unknown
-        enum:
-        - CC0-1.0
-        - CC-BY-SA-4.0
-        - GPL-2.0
-        - ODbL-1.0
-        - CC-BY-NC-SA-4.0
-        - unknown
-        - DbCL-1.0
-        - CC-BY-SA-3.0
-        - copyright-authors
-        - other
-        - reddit-api
-        - world-bank
-      subtitle:
-        type: string
-      description:
-        type: string
-        default: ''
-      files:
-        type: array
-        items:
-          $ref: '#/definitions/DatasetUploadFile'
-      isPrivate:
-        type: boolean
-        default: true
-      convertToCsv:
-        type: boolean
-        default: true
-      categoryIds:
-        type: array
-        items:
-          type: string
-  KernelPushRequest:
-    type: object
-    required:
-    - slug
-    - text
-    - language
-    - kernelType
-    properties:
-      slug:
-        type: string
-      newTitle:
-        type: string
-      text:
-        type: string
-      language:
-        type: string
-        enum:
-        - python
-        - r
-        - rmarkdown
-      kernelType:
-        type: string
-        enum:
-        - script
-        - notebook
-      isPrivate:
-        type: boolean
-      enableGpu:
-        type: boolean
-      enableInternet:
-        type: boolean
-      datasetDataSources:
-        type: array
-        items:
-          type: string
-      competitionDataSources:
-        type: array
-        items:
-          type: string
-      kernelDataSources:
-        type: array
-        items:
-          type: string
-      categoryIds:
-        type: array
-        items:
-          type: string
 parameters:
   guidParam:
     in: path
@@ -877,4 +713,206 @@ paths:
           description: Error
           schema:
             $ref: '#/definitions/Error'
-
+definitions:
+  Result:
+    type: object
+  Error:
+    type: object
+    properties:
+      code:
+        type: integer
+        example: 404
+        description: The server error code returned
+      message:
+        type: string
+        example: NotFound
+        description: The error message generated by the server
+  DatasetColumn:
+    type: object
+    properties:
+      order:
+        type: number
+        description: The order that the column comes in, 0-based. (The first column is 0, second is 1, etc.)
+      name:
+        type: string
+        description: The column name
+      type:
+        type: string
+        description: The type of all of the fields in the column
+        default: unknown
+        enum:
+        - string
+        - boolean
+        - numeric
+        - datetime
+        - unknown
+      originalType:
+        type: string
+        description: Used to store the original type of the column, which will be converted to Kaggle's types. For example, an `originalType` of `"integer"` would convert to a `type` of `"numeric"`
+      description:
+        type: string
+        description: The description of the column
+  DatasetUploadFile:
+    type: object
+    properties:
+      token:
+        type: string
+        description: A token referencing a specific file upload that can be used across requests
+      description:
+        type: string
+        description: The file description
+      columns:
+        type: array
+        description: A list of dataset column metadata
+        items:
+          $ref: '#/definitions/DatasetColumn'
+  DatasetNewVersionRequest:
+    type: object
+    required:
+    - versionNotes
+    - files
+    properties:
+      versionNotes:
+        type: string
+        description: The version notes for the new dataset version
+      subtitle:
+        type: string
+        description: The subtitle to set on the dataset
+      description:
+        type: string
+        description: The description to set on the dataset
+      files:
+        type: array
+        description: A list of files that should be associated with the dataset
+        items:
+          $ref: '#/definitions/DatasetUploadFile'
+      convertToCsv:
+        type: boolean
+        description: Whether or not a tabular dataset should be converted to csv
+        default: true
+      categoryIds:
+        type: array
+        description: A list of tag IDs to associated with the dataset
+        items:
+          type: string
+      deleteOldVersions:
+        type: boolean
+        description: Whether or not all previous versions of the dataset should be deleted upon creating the new version
+        default: false
+  DatasetNewRequest:
+    type: object
+    required:
+    - title
+    - licenseShortName
+    - files
+    properties:
+      title:
+        type: string
+        description: The title of the new dataset
+      slug:
+        type: string
+        description: The slug that the dataset should be created with
+      ownerSlug:
+        type: string
+        description: The owner's username
+      licenseName:
+        type: string
+        description: The license that should be associated with the dataset
+        default: unknown
+        enum:
+        - CC0-1.0
+        - CC-BY-SA-4.0
+        - GPL-2.0
+        - ODbL-1.0
+        - CC-BY-NC-SA-4.0
+        - unknown
+        - DbCL-1.0
+        - CC-BY-SA-3.0
+        - copyright-authors
+        - other
+        - reddit-api
+        - world-bank
+      subtitle:
+        type: string
+        description: The subtitle to be set on the dataset
+      description:
+        type: string
+        description: The description to be set on the dataset
+        default: ''
+      files:
+        type: array
+        description: A list of files that should be associated with the dataset
+        items:
+          $ref: '#/definitions/DatasetUploadFile'
+      isPrivate:
+        type: boolean
+        description: Whether or not the dataset should be private
+        default: true
+      convertToCsv:
+        type: boolean
+        description: Whether or not a tabular dataset should be converted to csv
+        default: true
+      categoryIds:
+        type: array
+        description: A list of tag IDs to associated with the dataset
+        items:
+          type: string
+  KernelPushRequest:
+    type: object
+    required:
+    - slug
+    - text
+    - language
+    - kernelType
+    properties:
+      slug:
+        type: string
+        description: The full slug of the kernel to push to, in the format `USERNAME/KERNEL-SLUG`. The kernel slug must be the title lowercased with dashes (`-`) replacing spaces
+      newTitle:
+        type: string
+        description: The title to be set on the kernel
+      text:
+        type: string
+        description: The kernel's source code
+      language:
+        type: string
+        description: The language that the kernel is written in
+        enum:
+        - python
+        - r
+        - rmarkdown
+      kernelType:
+        type: string
+        description: The type of kernel. Cannot be changed once the kernel has been created
+        enum:
+        - script
+        - notebook
+      isPrivate:
+        type: boolean
+        description: Whether or not the kernel should be private
+      enableGpu:
+        type: boolean
+        description: Whether or not the kernel should run on a GPU
+      enableInternet:
+        type: boolean
+        description: Whether or not the kernel should be able to access the internet
+      datasetDataSources:
+        type: array
+        description: A list of dataset data sources that the kernel should use. Each dataset is specified as `USERNAME/DATASET-SLUG`
+        items:
+          type: string
+      competitionDataSources:
+        type: array
+        description: A list of competition data sources that the kernel should use
+        items:
+          type: string
+      kernelDataSources:
+        type: array
+        description: A list of kernel data sources that the kernel should use. Each dataset is specified as `USERNAME/KERNEL-SLUG`
+        items:
+          type: string
+      categoryIds:
+        type: array
+        description: A list of tag IDs to associated with the dataset
+        items:
+          type: string
