# kaggle/models/dataset_new_request.py
@@ -112,6 +112,7 @@ class DatasetNewRequest(object):
     def title(self):
         """Gets the title of this DatasetNewRequest.  # noqa: E501
 
+        The title of the new dataset  # noqa: E501
 
         :return: The title of this DatasetNewRequest.  # noqa: E501
         :rtype: str
@@ -122,6 +123,7 @@ class DatasetNewRequest(object):
     def title(self, title):
         """Sets the title of this DatasetNewRequest.
 
+        The title of the new dataset  # noqa: E501
 
         :param title: The title of this DatasetNewRequest.  # noqa: E501
         :type: str
@@ -135,6 +137,7 @@ class DatasetNewRequest(object):
     def slug(self):
         """Gets the slug of this DatasetNewRequest.  # noqa: E501
 
+        The slug that the dataset should be created with  # noqa: E501
 
         :return: The slug of this DatasetNewRequest.  # noqa: E501
         :rtype: str
@@ -145,6 +148,7 @@ class DatasetNewRequest(object):
     def slug(self, slug):
         """Sets the slug of this DatasetNewRequest.
 
+        The slug that the dataset should be created with  # noqa: E501
 
         :param slug: The slug of this DatasetNewRequest.  # noqa: E501
         :type: str
@@ -156,6 +160,7 @@ class DatasetNewRequest(object):
     def owner_slug(self):
         """Gets the owner_slug of this DatasetNewRequest.  # noqa: E501
 
+        The owner's username  # noqa: E501
 
         :return: The owner_slug of this DatasetNewRequest.  # noqa: E501
         :rtype: str
@@ -166,6 +171,7 @@ class DatasetNewRequest(object):
     def owner_slug(self, owner_slug):
         """Sets the owner_slug of this DatasetNewRequest.
 
+        The owner's username  # noqa: E501
 
         :param owner_slug: The owner_slug of this DatasetNewRequest.  # noqa: E501
         :type: str
@@ -177,6 +183,7 @@ class DatasetNewRequest(object):
     def license_name(self):
         """Gets the license_name of this DatasetNewRequest.  # noqa: E501
 
+        The license that should be associated with the dataset  # noqa: E501
 
         :return: The license_name of this DatasetNewRequest.  # noqa: E501
         :rtype: str
@@ -187,6 +194,7 @@ class DatasetNewRequest(object):
     def license_name(self, license_name):
         """Sets the license_name of this DatasetNewRequest.
 
+        The license that should be associated with the dataset  # noqa: E501
 
         :param license_name: The license_name of this DatasetNewRequest.  # noqa: E501
         :type: str
@@ -204,6 +212,7 @@ class DatasetNewRequest(object):
     def subtitle(self):
         """Gets the subtitle of this DatasetNewRequest.  # noqa: E501
 
+        The subtitle to be set on the dataset  # noqa: E501
 
         :return: The subtitle of this DatasetNewRequest.  # noqa: E501
         :rtype: str
@@ -214,6 +223,7 @@ class DatasetNewRequest(object):
     def subtitle(self, subtitle):
         """Sets the subtitle of this DatasetNewRequest.
 
+        The subtitle to be set on the dataset  # noqa: E501
 
         :param subtitle: The subtitle of this DatasetNewRequest.  # noqa: E501
         :type: str
@@ -225,6 +235,7 @@ class DatasetNewRequest(object):
     def description(self):
         """Gets the description of this DatasetNewRequest.  # noqa: E501
 
+        The description to be set on the dataset  # noqa: E501
 
         :return: The description of this DatasetNewRequest.  # noqa: E501
         :rtype: str
@@ -235,6 +246,7 @@ class DatasetNewRequest(object):
     def description(self, description):
         """Sets the description of this DatasetNewRequest.
 
+        The description to be set on the dataset  # noqa: E501
 
         :param description: The description of this DatasetNewRequest.  # noqa: E501
         :type: str
@@ -246,6 +258,7 @@ class DatasetNewRequest(object):
     def files(self):
         """Gets the files of this DatasetNewRequest.  # noqa: E501
 
+        A list of files that should be associated with the dataset  # noqa: E501
 
         :return: The files of this DatasetNewRequest.  # noqa: E501
         :rtype: list[DatasetUploadFile]
@@ -256,6 +269,7 @@ class DatasetNewRequest(object):
     def files(self, files):
         """Sets the files of this DatasetNewRequest.
 
+        A list of files that should be associated with the dataset  # noqa: E501
 
         :param files: The files of this DatasetNewRequest.  # noqa: E501
         :type: list[DatasetUploadFile]
@@ -269,6 +283,7 @@ class DatasetNewRequest(object):
     def is_private(self):
         """Gets the is_private of this DatasetNewRequest.  # noqa: E501
 
+        Whether or not the dataset should be private  # noqa: E501
 
         :return: The is_private of this DatasetNewRequest.  # noqa: E501
         :rtype: bool
@@ -279,6 +294,7 @@ class DatasetNewRequest(object):
     def is_private(self, is_private):
         """Sets the is_private of this DatasetNewRequest.
 
+        Whether or not the dataset should be private  # noqa: E501
 
         :param is_private: The is_private of this DatasetNewRequest.  # noqa: E501
         :type: bool
@@ -290,6 +306,7 @@ class DatasetNewRequest(object):
     def convert_to_csv(self):
         """Gets the convert_to_csv of this DatasetNewRequest.  # noqa: E501
 
+        Whether or not a tabular dataset should be converted to csv  # noqa: E501
 
         :return: The convert_to_csv of this DatasetNewRequest.  # noqa: E501
         :rtype: bool
@@ -300,6 +317,7 @@ class DatasetNewRequest(object):
     def convert_to_csv(self, convert_to_csv):
         """Sets the convert_to_csv of this DatasetNewRequest.
 
+        Whether or not a tabular dataset should be converted to csv  # noqa: E501
 
         :param convert_to_csv: The convert_to_csv of this DatasetNewRequest.  # noqa: E501
         :type: bool
@@ -311,6 +329,7 @@ class DatasetNewRequest(object):
     def category_ids(self):
         """Gets the category_ids of this DatasetNewRequest.  # noqa: E501
 
+        A list of tag IDs to associated with the dataset  # noqa: E501
 
         :return: The category_ids of this DatasetNewRequest.  # noqa: E501
         :rtype: list[str]
@@ -321,6 +340,7 @@ class DatasetNewRequest(object):
     def category_ids(self, category_ids):
         """Sets the category_ids of this DatasetNewRequest.
 
+        A list of tag IDs to associated with the dataset  # noqa: E501
 
         :param category_ids: The category_ids of this DatasetNewRequest.  # noqa: E501
         :type: list[str]
